--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-<!-- remove this comment and place your html here -->
+<!DOCTYPE html>
+	<html>
+		<head>
+			<title>Personality</title>
+	<link rel="stylesheet" href="style.css">    
+<body>
+	<header>
+		<h1 id="page-tittle">How khemasia are you?</h1>
+	 </header>
+	<main>
+	<div id="quiz-wrapper"> 
+		<button id="try again"> try-again </button>
+		<button id="form-submit"Form-submit ></button>
+		<div id=result>
+		<div class="questions"> 
+		<h2>"When you have to see people you don’t like what do you do?"</h2>
+		<input id="show-up" type="radio" name="dislike">	
+		<label for= "show-up">
+		Show up and call all of them out their name  
+		</label>
+		<input type="radio" name="dislike" id="excuse">
+		<label for="excuse">
+		Make up every excuse to not see them
+		</label>
+		<input type="radio" name="dislike" id="shutup">
+		<label for="shutup">
+		Show up and keep all the thoughts of them not being shit to yourself even tho they aren’t shit
+		</label>
+		<input type="radio" name="dislike" id="don't-talk">
+		<label for="don’t-talk" >
+		Show up and just don’t talk to them 
+		</label>
+		</div>
+		<div class="questions"> 
+		<h3>"How many craps do you give (I couldn’t use the other word)?"</h3>
+		<input id="looking" type="radio" name="crap">	
+		<label for= "looking">
+		I’ve been searching all my life for these craps you’re talking about  
+		</label>
+		<input type="radio" name="crap" id="grave">
+		<label for="grave">
+		I would throw a party over your grave before i gave a single crap 
+		</label>
+		<input type="radio" name="crap" id="single">
+		<label for="single">
+		A single. Just one
+		</label>
+		<input type="radio" name="crap" id="lol">
+		<label for="lol" >
+		El Oh El nun
+		</div>
+		<div class="questions">
+		<h4>"How do you deal with exes?"</h4>
+		<input id="talk" type="radio" name="exes">	
+		<label for= "talk">
+		Talk shit DUH  
+		</label>
+		<input type="radio" name="exes" id="hell">
+		<label for="hell">
+		You make sure if they ever mess with you you make it your business to drag them to the pits of hell 
+		</label>
+		<input type="radio" name="exes" id="serious">
+		<label for="serious">
+		You keep talking to them. It’s not that serious
+		</label>
+		<input type="radio" name="exes" id="accordingly">
+		<label for="accordingly" >
+		You see what they do and follow accordingly
+		</div>
+
+	</div> 
+	</main>
+
+	 
+
+	
+	<p>
+</p>
+    <script src="simple.js"></script>
+    <script src="ascript.js"></script>
+</body>
+</html>
+
